==> fooledyouonce/bno055_driver/Core/Src/bno055_support.c <==
#include "bno055.h"
#include "stm32f3xx_hal.h"
#include <string.h>
#include <stdlib.h>
#define BNO055_I2C_BUS_WRITE_ARRAY_INDEX ((u8)1)

s8 BNO055_I2C_bus_write(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
    s32 BNO055_iERROR = BNO055_INIT_VALUE;
    //u8 array[I2C_BUFFER_LEN];
    //u8 stringpos = BNO055_INIT_VALUE;

    //array[BNO055_INIT_VALUE] = reg_addr;

    BNO055_iERROR = HAL_I2C_Mem_Write(&hi2c3, dev_addr << 1, reg_addr, 1, reg_data, cnt, 1000);

//    for (stringpos = BNO055_INIT_VALUE; stringpos < cnt; stringpos++)
//    {
//        array[stringpos + BNO055_I2C_BUS_WRITE_ARRAY_INDEX] = *(reg_data + stringpos);
//    }

/*
 * Please take the below APIs as your reference for
 * write the data using I2C communication
 * "BNO055_iERROR = I2C_WRITE_STRING(DEV_ADDR, ARRAY, CNT+1)"
 * add your I2C write APIs here
 * BNO055_iERROR is an return value of I2C read API
 * Please select your valid return value
 * In the driver BNO055_SUCCESS defined as 0
 * and FAILURE defined as -1
 * Note :
 * This is a full duplex operation,
 * The first read data is discarded, for that extra write operation
 * have to be initiated. For that cnt+1 operation done
 * in the I2C write string function
 * For more information please refer data sheet SPI communication:
 */
    //break
    return (s8)BNO055_iERROR;
}

s8 BNO055_I2C_bus_read(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
    s32 BNO055_iERROR = BNO055_INIT_VALUE;

    /* Please take the below API as your reference
     * for read the data using I2C communication
     * add your I2C read API here.
     * "BNO055_iERROR = I2C_WRITE_READ_STRING(DEV_ADDR,
     * ARRAY, ARRAY, 1, CNT)"
     * BNO055_iERROR is an return value of SPI write API
     * Please select your valid return value
     * In the driver BNO055_SUCCESS defined as 0
     * and FAILURE defined as -1
     */
//break
    BNO055_iERROR = HAL_I2C_Mem_Read(&hi2c3, dev_addr << 1, reg_addr, 1, reg_data, cnt, 1000);

    return (s8)BNO055_iERROR;
}

void BNO055_delay_msek(u32 msek)
{
    /*Here you can write your own delay routine*/
	HAL_Delay(msek);
}
